# PicoPico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
.github/workflows/: build.yml
build_luac/: CMakeCache.txt  Makefile  SDL2ConfigVersion.cmake  cmake_install.cmake
build_luac/SDL/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  sdl2-config  sdl2.pc
build_luac/SDL_mixer/: Makefile  cmake_install.cmake
build_luac/local_lua/: Makefile  cmake_install.cmake  luac
build_luac/lua/: Makefile  cmake_install.cmake
esp32_pico/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  config.env  flash_app_args  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  project_description.json  x509_crt_bundle.S
esp32_pico/bootloader/: .bin_timestamp  CMakeCache.txt  Makefile  bootloader.elf  bootloader.map  cmake_install.cmake  compile_commands.json  config.env  kconfigs.in  kconfigs_projbuild.in  project_description.json
esp32_pico/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp32_pico/esp-idf/: Makefile  cmake_install.cmake
lilka/: generate_game_data.py  platformio.ini
lua/: .gitignore  CMakeLists.txt  build_3ds.sh  build_arm.sh  dec.py  fix32.h  lapi.cpp  lauxlib.cpp  lbaselib.cpp  lcode.cpp  ldo.cpp  ldump.cpp  liolib.cpp  llex.cpp  llimits.h  lobject.cpp  lobject.h  loslib.cpp  lparser.cpp  lpico8lib.cpp  ltable.cpp  ltable.h  lua.cpp  lua.h  luac.cpp  luaconf.h  lundump.cpp  lvm.cpp  makefile
src/: lilka_backend.cpp  main.cpp
(+168 files in other folders)
