add_library(my_lua_lib STATIC
        lapi.cpp
        lauxlib.cpp
        lbaselib.cpp
        lbitlib.cpp
        lcode.cpp
        lcorolib.cpp
        lctype.cpp
        ldblib.cpp
        ldebug.cpp
        ldo.cpp
        ldump.cpp
        lfunc.cpp
        lgc.cpp
        linit.cpp
        liolib.cpp
        llex.cpp
        lmem.cpp
        loadlib.cpp
        lobject.cpp
        lopcodes.cpp
        loslib.cpp
        lparser.cpp
        lpico8lib.cpp
        lstate.cpp
        lstring.cpp
        lstrlib.cpp
        ltable.cpp
        ltablib.cpp
        ltests.cpp
        ltm.cpp
        lundump.cpp
        lvm.cpp
        lzio.cpp

        fix32.h
        lapi.h
        lauxlib.h
        lcode.h
        lctype.h
        ldebug.h
        ldo.h
        lfunc.h
        lgc.h
        llex.h
        llimits.h
        lmem.h
        lobject.h
        lopcodes.h
        lparser.h
        lstate.h
        lstring.h
        ltable.h
        ltests.h
        ltm.h
        luaconf.h
        lua.h
        lualib.h
        lundump.h
        lvm.h
        lzio.h
        )
target_link_libraries(my_lua_lib)
